Fix spacing

--- a/src/components/Layout.styl
+++ b/src/components/Layout.styl
@@ -31,7 +31,7 @@ html, body
   .content
     position: relative
     padding: 2%
-    padding-left: 6%
+    padding-left: 12%
     padding-right: 24%
     height: 80%
     margin-left: allocatePageFraction($size-of-sidebar)
