--- a/src/components/Sidebar/Sidebar.styl
+++ b/src/components/Sidebar/Sidebar.styl
@@ -14,16 +14,17 @@ $bleed-green = #5bbd76
   color: $accent-white
   height: 93%;
   text-decoration: none
+  line-height: 1.5
 
   .sidebar-main
     padding-left: 1%
     padding-right: 1%
-    // padding-top: 10%
     width: 100%
 
   .sidebar-description
     color: $accent-white
     opacity: 0.75
+    font-size: 80%
     padding-left: 10%
     padding-right: 10%
 
